Added new libraries into it

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   </header>
 
   <section class="hero">
-    <img src="photo2c.jpg" alt="Profile Photo">
+    <img src="photo.jpg" alt="Profile Photo">
     <h2>Muhammad Abdullah Zubair</h2>
     <p>Python & AI/ML Enthusiast | Aspiring Developer</p>
     <p>📍 Rawalpindi, Pakistan | ✉ muhammadabdullahzubairmalik@gmail.com | 📞 +92-3105167551</p>
@@ -217,7 +217,7 @@
     <h2 class="section-title">Skills & Expertise</h2>
     <div class="skills">
       <div class="card"><h3>Programming</h3><p>Python, SQL, OOP, DSA, Visual Programming</p></div>
-      <div class="card"><h3>Libraries & Tools</h3><p>Pandas, NumPy, Selenium</p></div>
+      <div class="card"><h3>Libraries & Tools</h3><p>Pandas, NumPy, Selenium, Matplotlib, Seaborn, Plotly</p></div>
       <div class="card"><h3>Other Skills</h3><p>Web Scraping, Data Annotation, Problem Solving</p></div>
     </div>
   </section>
@@ -237,7 +237,7 @@
     <div class="projects">
       <div class="card"><h3>CryptoScraperBot</h3><p>Scrapes cryptocurrency data and exports structured datasets.</p></div>
       <div class="card"><h3>Riddle Game (Python)</h3><p>Game using riddles and clues linked across data sources.</p></div>
-      <div class="card"><h3>Pharmacy Management System (Java)</h3><p>GUI-based pharmacy management app.</p></div>
+      <div class="card"><h3>Pharmacy Management System (Java)</h3><p>GUI-based spring boot pharmacy management app.</p></div>
       <div class="card"><h3>Mini Python Scripts</h3><p>Map, automation tools, background remover, etc.</p></div>
     </div>
   </section>
