new changes made

--- a/index.html
+++ b/index.html
@@ -189,13 +189,14 @@
     <img src="photo.jpg" alt="Profile Photo">
     <h2>Muhammad Abdullah Zubair</h2>
     <p>Python & AI/ML Enthusiast | Aspiring Developer</p>
-    <p>📍 Rawalpindi, Pakistan | ✉ muhammadabdullahzubairmalik@gmail.com | 📞 +92-3105167551</p>
+    <p>📍 Rawalpindi, Pakistan | ✉ muhammadabdullahzubairmalik@gmai.com | 📞 +92-3105167551</p>
+    <a href="resume.pdf" class="download-btn" download>Download Resume</a>
   </section>
 
   <section id="about">
     <h2 class="section-title">Career Objective</h2>
     <p style="text-align:center; max-width:800px; margin:auto;">
-      Motivated Computer Science student who loves to code and shape ideas into reality, with expertise in Python, Data Handling, and Object-Oriented Programming. Seeking an internship/job in Python or AI/ML to apply technical skills, work on real-world projects, and grow as a developer.
+      Motivated Computer Science student with expertise in Python, Data Handling, and Object-Oriented Programming. Seeking an internship in Python or AI/ML to apply technical skills, work on real-world projects, and grow as a developer.
     </p>
   </section>
 
@@ -216,9 +217,26 @@
   <section id="skills">
     <h2 class="section-title">Skills & Expertise</h2>
     <div class="skills">
-      <div class="card"><h3>Programming</h3><p>Python, SQL, OOP, DSA, Visual Programming</p></div>
-      <div class="card"><h3>Libraries & Tools</h3><p>Pandas, NumPy, Selenium, Matplotlib, Seaborn, Plotly</p></div>
-      <div class="card"><h3>Other Skills</h3><p>Web Scraping, Data Annotation, Problem Solving</p></div>
+      <div class="card">
+        <h3>Programming</h3>
+        <p>Python, SQL, Object-Oriented Programming, Data Structures & Algorithms</p>
+      </div>
+      <div class="card">
+        <h3>AI / Machine Learning</h3>
+        <p>Machine Learning Models, Data Preprocessing, Feature Engineering, Model Evaluation, Predictive Systems</p>
+      </div>
+      <div class="card">
+        <h3>Frameworks & Tools</h3>
+        <p>Flask, Firebase, REST API Integration, Selenium, Web Scraping</p>
+      </div>
+      <div class="card">
+        <h3>Libraries</h3>
+        <p>Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, Plotly</p>
+      </div>
+      <div class="card">
+        <h3>Core Strengths</h3>
+        <p>Problem Solving, Data Handling, Automation, Data Annotation, Backend Development</p>
+      </div>
     </div>
   </section>
 
@@ -235,10 +253,11 @@
   <section id="projects">
     <h2 class="section-title">Projects</h2>
     <div class="projects">
-      <div class="card"><h3>CryptoScraperBot</h3><p>Scrapes cryptocurrency data and exports structured datasets.</p></div>
-      <div class="card"><h3>Riddle Game (Python)</h3><p>Game using riddles and clues linked across data sources.</p></div>
-      <div class="card"><h3>Pharmacy Management System (Java)</h3><p>GUI-based spring boot pharmacy management app.</p></div>
-      <div class="card"><h3>Mini Python Scripts</h3><p>Map, automation tools, background remover, etc.</p></div>
+      <div class="card"><h3>Ringba Campaign Dashboard (Flask)</h3><p>Built a Flask-based web dashboard integrating Ringba API to display campaign analytics, revenue tracking, agent management, and number assignment. Integrated Firebase for real-time data storage and handled multiple campaign datasets.</p></div>
+      <div class="card"><h3>CVSense — AI Resume Screening</h3><p>Developed an AI-based system that reads resumes and ranks candidates based on job description matching using text processing and similarity techniques.</p></div>
+      <div class="card"><h3>Loan Approval Prediction System</h3><p>Built a machine learning model to predict loan approval using applicant data with preprocessing, feature encoding, and model evaluation.</p></div>
+      <div class="card"><h3>CryptoScraperBot</h3><p>Scrapes cryptocurrency data and exports structured datasets for analysis.</p></div>
+      <div class="card"><h3>Pharmacy Management System (Spring Boot Java)</h3><p>GUI-based pharmacy management application with database operations.</p></div>
     </div>
   </section>
 
@@ -246,25 +265,33 @@
     <h2 class="section-title">Experience</h2>
     <div class="experience">
       <div class="card">
+        <h3>AI/ML Intern — ITSolera</h3>
+        <p>Worked on machine learning and data-driven applications including resume screening and loan prediction systems. Performed data preprocessing, model training, and evaluation.</p>
+      </div>
+      <div class="card">
+        <h3>Freelance Python Developer — Ringba Dashboard</h3>
+        <p>Developed campaign management dashboard using Flask and Ringba API with Firebase integration, agent configuration, revenue analytics, and campaign performance tracking.</p>
+      </div>
+      <div class="card">
         <h3>Data Annotation & QA Testing</h3>
-        <p>Prepared datasets for call center AI bots.<br>Performed testing, validation, and structure checking.</p>
+        <p>Prepared datasets for call center AI bots and performed validation, testing, and structure checking.</p>
       </div>
       <div class="card">
         <h3>Web Scraping</h3>
-        <p>Collected sector-specific public data using Python & Selenium.<br>Processed and organized results into CSV for structured use.</p>
+        <p>Collected sector-specific public data using Python & Selenium and processed results into structured datasets.</p>
       </div>
     </div>
   </section>
 
   <section id="contact">
     <h2 class="section-title">Contact</h2>
-    <p style="text-align:center;">Email: <a href="mailto:muhammadabdullahzubairmalik@gmail.com">muhammadabdullahzubairmalik@gmail.com</a></p>
-    <p style="text-align:center;">GitHub: <a href="https://github.com/abdullahhoonmain">github.com/abdullahhoonmain/</a></p>
-    <p style="text-align:center;">LinkedIn: <a href="https://www.linkedin.com/in/abdullahhoonmain/">www.linkedin.com/in/abdullahhoonmain</a></p>
+    <p style="text-align:center;">Email: <a href="mailto:muhammadabdullahzubairmalik@gmai.com">muhammadabdullahzubairmalik@gmai.com</a></p>
+    <p style="text-align:center;">GitHub: <a href="#">github.com/yourprofile</a></p>
+    <p style="text-align:center;">LinkedIn: <a href="#">linkedin.com/in/yourprofile</a></p>
   </section>
 
   <footer>
-    <p>Made with Love. Open source on <a href="https://github.com/abdullahhoonmain/hire-me-please">GitHub</a>.</p>
+    <p>Made with ❤️. Open source on <a href="#">GitHub</a>.</p>
     <p>&copy; 2025 Muhammad Abdullah Zubair</p>
   </footer>
 </body>
