gitbuh and linkedin added

--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
   <section id="contact">
     <h2 class="section-title">Contact</h2>
     <p style="text-align:center;">Email: <a href="mailto:muhammadabdullahzubairmalik@gmai.com">muhammadabdullahzubairmalik@gmai.com</a></p>
-    <p style="text-align:center;">GitHub: <a href="#">github.com/yourprofile</a></p>
-    <p style="text-align:center;">LinkedIn: <a href="#">linkedin.com/in/yourprofile</a></p>
+    <p style="text-align:center;">GitHub: <a href="#">github.com/abdullahhoonmain</a></p>
+    <p style="text-align:center;">LinkedIn: <a href="#">linkedin.com/in/abdullahhoonmain</a></p>
   </section>
 
   <footer>
