--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
 
   <section id="contact">
     <h2 class="section-title">Contact</h2>
-    <p style="text-align:center;">Email: <a href="mailto:muhammadabdullahzubairmalik@gmai.com">muhammadabdullahzubairmalik@gmai.com</a></p>
-    <p style="text-align:center;">GitHub: <a href="#">github.com/abdullahhoonmain</a></p>
-    <p style="text-align:center;">LinkedIn: <a href="#">linkedin.com/in/abdullahhoonmain</a></p>
+    <p style="text-align:center;">Email: <a href="mailto:muhammadabdullahzubairmalik@gmail.com">muhammadabdullahzubairmalik@gmail.com</a></p>
+    <p style="text-align:center;">GitHub: <a href="https://github.com/abdullahhoonmain">github.com/abdullahhoonmain</a></p>
+    <p style="text-align:center;">LinkedIn: <a href="https://linkedin.com/in/abdullahhoonmain">linkedin.com/in/abdullahhoonmain</a></p>
   </section>
 
   <footer>
